# algorithms_programming_exercises

./: CMakeLists.txt
00_paradigms/: 01_recursion.md  02_divide_and_conquer.md
01_recursion/: CMakeLists.txt
01_recursion/mandelbrot/: main.cpp  main_viz.cpp  mandelbrot.cpp  mandelbrot.h  mandelbrot_test.cpp  mandelbrot_visualizer.cpp  mandelbrot_visualizer.h
01_recursion/simple_fibonacci/: fibonacci.cpp  fibonacci.h  fibonacci_plotter.cpp  fibonacci_plotter.h  fibonacci_test.cpp  main_fibonacci_plotter.cpp  simple_fibonacci.cpp
01_recursion/tower_of_hanoi/: main.cpp
02_sorting/: CMakeLists.txt
02_sorting/data_generation/: generate_sortable_list.cpp
02_sorting/insertion_sorting/: main.cpp
02_sorting/sorting_algos/: insertion_sort.cpp  main.cpp  sort_algorithms.h  sort_executor.cpp
data/: gen_numbers.txt  gen_numbers_small.txt
